src/objects/LookupRollupSummaryScheduleItems_GLBL__c.object
<CustomObject>
    <description>Object used to set up schedules for the Lookup Rollup Summary funcationality. MERC : Created on 2014-05-27 by Joe Ferraro, Mavens Consulting</description>
    <fields>
        <fullName>LookupRollupSummary_GLBL__c</fullName>
        <label>Lookup Rollup Summary</label>
        <referenceTo>LookupRollupSummary_GLBL__c</referenceTo>
        <relationshipLabel>Lookup Rollup Summary Schedule Items</relationshipLabel>
        <relationshipName>Lookup_Rollup_Summary_Schedule_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ParentId_GLBL__c</fullName>
        <label>Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentRecord_GLBL__c</fullName>
        <formula>HYPERLINK( ParentId_GLBL__c , &apos;Parent Record&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QualifiedParentID_GLBL__c</fullName>
        <externalId>true</externalId>
        <label>Qualified Parent ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Lookup Rollup Summary Schedule Item</label>
    <nameField>
        <label>Lookup Rollup Summary Schedule Item Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Rollup Summary Schedule Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>